--- a/apps/dawarich/templates/postgresql.yaml
+++ b/apps/dawarich/templates/postgresql.yaml
@@ -38,7 +38,8 @@ spec:
     version: "16"
     parameters:
       archive_mode: "off"
-      max_connections: "4"
+      # RAILS_MAX_THREADS: 5
+      max_connections: "5"
       shared_buffers: 32MB
       log_checkpoints: "off"
       log_connections: "off"
