esphome: Add auth for web server

--- a/apps/esphome/templates/external-secret.yaml
+++ b/apps/esphome/templates/external-secret.yaml
@@ -20,6 +20,8 @@ spec:
 
           ota_password: {{`"{{ .ota_password }}"`}}
           home_assistant_api_key: {{`"{{ .home_assistant_api_key }}"`}}
+          web_server_username: {{`"{{ .web_server_username }}"`}}
+          web_server_password: {{`"{{ .web_server_password }}"`}}
   data:
     - secretKey: ota_password
       remoteRef:
@@ -41,6 +43,14 @@ spec:
       remoteRef:
         key: /esphome/home-assistant
         property: api_key
+    - secretKey: web_server_username
+      remoteRef:
+        key: /esphome/web-server
+        property: username
+    - secretKey: web_server_password
+      remoteRef:
+        key: /esphome/web-server
+        property: password
     # in template:
     # mqtt_host: mosquitto.internal.grigri.cloud
     # mqtt_user: {{`"{{ .mosquitoto_username }}"`}}
