--- a/apps/esphome/config/packages/smart-plug-v2.yaml
+++ b/apps/esphome/config/packages/smart-plug-v2.yaml
@@ -18,6 +18,9 @@ preferences:
 
 web_server:
   port: 80
+  auth:
+    username: !secret web_server_username
+    password: !secret web_server_password
 
 logger:
   baud_rate: 0
