esphome: Add script for processing include directives
This will help to compile on dashboard again.

--- a/apps/esphome/templates/external-secret.yaml
+++ b/apps/esphome/templates/external-secret.yaml
@@ -12,7 +12,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        secrets.yaml: |-
+        secrets.yaml: |
           wifi_ssid: {{`"{{ .wifi_ssid }}"`}}
           wifi_password: {{`"{{ .wifi_password }}"`}}
           wifi_fallback_ap_password: {{`"{{ .wifi_fallback_ap_password }}"`}}
