--- a/apps/lidarr/values.yaml
+++ b/apps/lidarr/values.yaml
@@ -9,12 +9,8 @@ app-template:
           image:
             repository: ghcr.io/crutonjohn/lidarr-plugins
             tag: 2.9.5.4543@sha256:ccb6fb2d107e55e24b8f92ebbc08416bfab30decab222be8c00b89f30668ca8f
-
           env:
             TZ: Europe/Madrid
-            LIDARR__APP__INSTANCENAME: Lidarr
-            LIDARR__SERVER__PORT: &port 8686
-            LIDARR__LOG__LEVEL: info
           resources:
             requests:
               cpu: 10m
@@ -37,7 +33,7 @@ app-template:
       controller: lidarr
       ports:
         http:
-          port: *port
+          port: 8686
 
   ingress:
     lidarr:
