navidrome: Add lidarr host path

--- a/apps/lidarr/values.yaml
+++ b/apps/lidarr/values.yaml
@@ -93,7 +93,7 @@ app-template:
       globalMounts:
         - path: /config
       existingClaim: config-lidarr
-    peliculas:
+    musica:
       enabled: true
       type: hostPath
       hostPath: /datasets/musica
