navidrome: Add Last fm api key

--- a/apps/navidrome/templates/external-secrets.yaml
+++ b/apps/navidrome/templates/external-secrets.yaml
@@ -20,3 +20,11 @@ spec:
       remoteRef:
         key: /navidrome/spotify
         property: secret
+    - secretKey: ND_LASTFM_APIKEY
+      remoteRef:
+        key: /navidrome/lastfm
+        property: api_key
+    - secretKey: ND_LASTFM_SECRET
+      remoteRef:
+        key: /navidrome/lastfm
+        property: secret
