http-echo: Trigger ArgoCD alert

--- a/apps/http-echo/values.yaml
+++ b/apps/http-echo/values.yaml
@@ -17,7 +17,7 @@ app-template:
               memory: 14Mi
             limits:
               cpu: 200m
-              memory: 50Mi
+              memory: 50
           probes:
             liveness:
               enabled: true
