argocd: Add alertmanager as subscriptions and remove telegram secrets

--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -205,7 +205,7 @@ argo-cd:
 
     subscriptions:
       - recipients:
-          - telegram:-1001533258564
+          - alertmanager
         triggers:
           - on-health-degraded
           - on-sync-failed
