alertmanager: Not send resolved for argocd alerts

--- a/system/monitoring/resources/alertmanager-secret.yaml
+++ b/system/monitoring/resources/alertmanager-secret.yaml
@@ -49,6 +49,16 @@ spec:
                 parse_mode: HTML
                 # seems optional but complains if not added
                 api_url: https://api.telegram.org
+            - name: telegram-argocd
+              telegram_configs:
+              - send_resolved: false
+                bot_token: "{{ .token }}"
+                chat_id: {{ .chat_id }}
+                message: {{`'{{ template "telegram.custom.message" .}}'`}}
+                # HTML has less issues with un-escaped characters
+                parse_mode: HTML
+                # seems optional but complains if not added
+                api_url: https://api.telegram.org
             - name: "null"
           route:
             group_by:
@@ -69,6 +79,9 @@ spec:
               - match:
                   alertname: InfoInhibitor
                 receiver: "null"
+              - match:
+                  service: argocd
+                receiver: telegram-argocd
           templates:
           - /etc/alertmanager/configmaps/alertmanager-telegram-template/telegram.tmpl
   data:
