argocd: Cast to string alertmanager message annotations

--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -221,7 +221,8 @@ argo-cd:
             severity: warning
             service: argocd
           annotations:
-            message: Application {{.app.metadata.name}} is now running new version of deployments manifests
+            message: |
+              Application {{.app.metadata.name}} is now running new version of deployments manifests
       template.app-health-degraded: |
         message: |
           *💔{{.app.metadata.name}}*
@@ -232,7 +233,8 @@ argo-cd:
             severity: warning
             service: argocd
           annotations:
-            message: Application {{.app.metadata.name}} has degraded
+            message: |
+              Application {{.app.metadata.name}} has degraded
       template.app-sync-failed: |
         message: |
           *❌{{.app.metadata.name}}*
@@ -243,7 +245,8 @@ argo-cd:
             severity: warning
             service: argocd
           annotations:
-            message: The sync operation of application {{.app.metadata.name}} has failed at {{.app.status.operationState.finishedAt}} with the following error: {{.app.status.operationState.message}}
+            message: |
+              The sync operation of application {{.app.metadata.name}} has failed at {{.app.status.operationState.finishedAt}} with the following error: {{.app.status.operationState.message}}
 
       # template.app-sync-running: |
       #   message: |
