Revert "http-echo: Trigger ArgoCD alert"
This reverts commit c2a700dd4badf835808d54609f31a0d410c9abe0.

--- a/apps/http-echo/values.yaml
+++ b/apps/http-echo/values.yaml
@@ -17,7 +17,7 @@ app-template:
               memory: 14Mi
             limits:
               cpu: 200m
-              memory: 50
+              memory: 50Mi
           probes:
             liveness:
               enabled: true
