--- a/system/monitoring/resources/alertmanager-secret.yaml
+++ b/system/monitoring/resources/alertmanager-secret.yaml
@@ -38,28 +38,26 @@ spec:
                 - alertname = InfoInhibitor
               target_matchers:
                 - severity = info
+          telegram_config_base: &telegram_config_base
+            bot_token: "{{ .token }}"
+            chat_id: {{ .chat_id }}
+            message: {{`'{{ template "telegram.custom.message" .}}'`}}
+            # HTML has less issues with un-escaped characters
+            parse_mode: HTML
+            # seems optional but complains if not added
+            api_url: https://api.telegram.org
+
           receivers:
             - name: telegram
               telegram_configs:
-              - send_resolved: true
-                bot_token: "{{ .token }}"
-                chat_id: {{ .chat_id }}
-                message: {{`'{{ template "telegram.custom.message" .}}'`}}
-                # HTML has less issues with un-escaped characters
-                parse_mode: HTML
-                # seems optional but complains if not added
-                api_url: https://api.telegram.org
+                - <<: *telegram_config_base
+                  send_resolved: true
             - name: telegram-argocd
               telegram_configs:
-              - send_resolved: false
-                bot_token: "{{ .token }}"
-                chat_id: {{ .chat_id }}
-                message: {{`'{{ template "telegram.custom.message" .}}'`}}
-                # HTML has less issues with un-escaped characters
-                parse_mode: HTML
-                # seems optional but complains if not added
-                api_url: https://api.telegram.org
+                - <<: *telegram_config_base
+                  send_resolved: false
             - name: "null"
+
           route:
             group_by:
               - job
