dawarich: Remove debug messages

--- a/apps/dawarich/values.yaml
+++ b/apps/dawarich/values.yaml
@@ -27,6 +27,7 @@ app-template:
             repository: freikin/dawarich
             tag: 0.22.3
           env: &env
+            RAILS_ENV: production
             DATABASE_HOST: dawarich-postgres
             DATABASE_USERNAME:
               valueFrom:
