renovate: Fix exclude lidarr from automerge upgrades

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -87,7 +87,7 @@
         'docker',
       ],
       matchPackageNames: [
-        'lidarr',
+        '/lidarr/',
       ],
       automerge: false,
     },
