--- a/system/kube-system/resources/cilium/bgp-peering-policy.yaml
+++ b/system/kube-system/resources/cilium/bgp-peering-policy.yaml
@@ -8,7 +8,10 @@ spec:
       kubernetes.io/os: linux
   virtualRouters:
     - localASN: 64513
-      # this allows routingMode native withouth the need of autoDirectNodeRoutes true: Not tested
+      serviceAdvertisements:
+        - LoadBalancerIP
+        - ClusterIP
+      # this allows routingMode native without the need of autoDirectNodeRoutes true: Not tested
       # exportPodCIDR: true
       # Advertisement of services to BGP peers
       # https://docs.cilium.io/en/v1.15/network/bgp-control-plane/#service-announcements
