--- a/system/kube-system/cilium-values.yaml
+++ b/system/kube-system/cilium-values.yaml
@@ -80,6 +80,7 @@ bgp:
   enabled: false
 
 bpf:
+  lbExternalClusterIP: true
   masquerade: true
 
 # -- This feature set enables virtual BGP routers to be created via
