--- a/system/kube-system/resources/nodelocaldns/configmap.yaml
+++ b/system/kube-system/resources/nodelocaldns/configmap.yaml
@@ -14,19 +14,19 @@ data:
         }
         reload
         loop
-        bind 169.254.25.10
+        bind 0.0.0.0
         forward . 10.43.0.10 {
             force_tcp
         }
         prometheus :9253
-        health 169.254.25.10:9254
+        health
     }
     in-addr.arpa:53 {
         errors
         cache 30
         reload
         loop
-        bind 169.254.25.10
+        bind 0.0.0.0
         forward . 10.43.0.10 {
             force_tcp
         }
@@ -37,7 +37,7 @@ data:
         cache 30
         reload
         loop
-        bind 169.254.25.10
+        bind 0.0.0.0
         forward . 10.43.0.10 {
             force_tcp
         }
@@ -48,7 +48,7 @@ data:
         cache 30
         reload
         loop
-        bind 169.254.25.10
+        bind 0.0.0.0
         forward . /etc/resolv.conf
         prometheus :9253
     }
