--- a/system/kube-system/resources/nodelocaldns/service.yaml
+++ b/system/kube-system/resources/nodelocaldns/service.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kube-dns-upstream
+  name: node-local-dns
   namespace: kube-system
   labels:
-    k8s-app: kube-dns
-    kubernetes.io/name: "KubeDNSUpstream"
+    k8s-app: node-local-dns
 spec:
   ports:
   - name: dns
@@ -17,4 +16,4 @@ spec:
     protocol: TCP
     targetPort: 53
   selector:
-    k8s-app: kube-dns
+    k8s-app: node-local-dns
