nodelocaldns: Change lrp frontend to ip `169.254.25.10`

--- a/system/kube-system/resources/nodelocaldns/cilium-local-redirect-policy.yaml
+++ b/system/kube-system/resources/nodelocaldns/cilium-local-redirect-policy.yaml
@@ -5,9 +5,8 @@ metadata:
   namespace: kube-system
 spec:
   redirectFrontend:
-    serviceMatcher:
-      serviceName: kube-dns
-      namespace: kube-system
+    addressMatcher:
+      ip: 169.254.25.10
       toPorts:
         - name: dns-tcp
           port: "53"
