--- a/system/kube-system/resources/nodelocaldns/configmap.yaml
+++ b/system/kube-system/resources/nodelocaldns/configmap.yaml
@@ -49,6 +49,8 @@ data:
         reload
         loop
         bind 0.0.0.0
-        forward . /etc/resolv.conf
+        forward . /etc/resolv.conf {
+            force_udp
+        }
         prometheus :9253
     }
