Revert "nodelocaldns: Force udp to upstreams DNSs"
This reverts commit e70a9d914c9932158f2964e98b7439d7c7c0c44d.

--- a/system/kube-system/resources/nodelocaldns/configmap.yaml
+++ b/system/kube-system/resources/nodelocaldns/configmap.yaml
@@ -49,8 +49,6 @@ data:
         reload
         loop
         bind 0.0.0.0
-        forward . /etc/resolv.conf {
-            force_udp
-        }
+        forward . /etc/resolv.conf
         prometheus :9253
     }
