--- a/platform/velero/templates/cross-backup-bis/cronjob.yaml
+++ b/platform/velero/templates/cross-backup-bis/cronjob.yaml
@@ -14,6 +14,7 @@ spec:
           priorityClassName: high-priority
           containers:
           - name: rclone
+            # renovate: datasource=docker
             image: rclone/rclone:1.66.0
             command:
               - /bin/sh
