--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -108,6 +108,8 @@ app-template:
       replicas: 1
       pod:
         runtimeClassName: nvidia
+        labels:
+          runtime-class: nvidia
       containers:
         whisper:
           image:
