zfs-localpv: Run just in amd64

--- a/system/zfs-localpv/values.yaml
+++ b/system/zfs-localpv/values.yaml
@@ -7,6 +7,8 @@ zfs-localpv:
     # requests:
     #   cpu: 10m
     #   memory: 32Mi
+    nodeSelector:
+      kubernetes.io/arch: amd64
   zfsController:
     resources: {}
     # limits:
