hass: Change whisper emptyDir path

--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -394,7 +394,7 @@ app-template:
       advancedMounts:
         whisper:
           whisper:
-            - path: /data
+            - path: /config
     piper:
       enabled: true
       type: emptyDir
