renovate: Add email to gitAuthor
Required by the RFC5322 format

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -6,7 +6,7 @@
     ':preserveSemverRanges',
     ':disableRateLimiting',
   ],
-  gitAuthor: 'Renovate Bot',
+  gitAuthor: 'Renovate Bot <renovate@grigri.cloud>',
   forkProcessing: 'enabled',
   rebaseWhen: 'conflicted',
   commitMessagePrefix: '{{parentDir}}: ',
