Revert "hass: Change whisper emptyDir path"
This reverts commit d7a3ec383ee6774b547989ec02c2e5f00b0e76c7.

--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -399,7 +399,7 @@ app-template:
       advancedMounts:
         whisper:
           whisper:
-            - path: /config
+            - path: /data
     piper:
       enabled: true
       type: emptyDir
