--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -113,17 +113,16 @@ app-template:
       containers:
         whisper:
           image:
+            # https://github.com/pando85/wyoming-addons/tree/master/whisper
             repository: pando85/wyoming-whisper
-            tag: 2.0.0
+            tag: 2.4.0
           args:
             - --model
-            - large-v3
+            - large-v3-turbo
             - --language
             - es
             - --device
             - cuda
-            - --compute-type
-            - int8
           resources:
             requests:
               cpu: 15m
