hass: Re-add compute-type to int8

--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -123,6 +123,8 @@ app-template:
             - es
             - --device
             - cuda
+            - --compute-type
+            - int8
           resources:
             requests:
               cpu: 15m
